--- a/Carmichael/plantingseason.html
+++ b/Carmichael/plantingseason.html
@@ -15,11 +15,10 @@
 </ul>
 
 <p> 
- This little bit of instability in nature can make planting season a little tricky here in Ohio.  It takes a bit of strategy and experience to turn out a good harvest in the Fall.  With April leaving and us entering into May, now is the time to enter into the planting seaon.  According to Farmers Almanac 2021, the last frost should leave us by May 1 so the first week of May where we can go into our gardens full force with little worry about any frost to harm our work.  
- </p>
+ This little bit of instability in nature can make planting season a little tricky here in Ohio.  It takes a bit of strategy and experience to turn out a good harvest in the Fall.  With April leaving and us entering into May, now is the time to enter into the planting season.  According to <a href = "https://www.farmersalmanac.com/average-frost-dates">Farmers Almanac 2021</a>, the final frost should be done by May 1 so planting season goes in full force in early May!  </p>
 
 <p>
- Planting season to harvest season requires a combination of heart, faith and hard work.  Every year, our experiences teach us new tactics and strategies to improve.  If you're getting started, here's a few things to consider
+ Planting season to harvest season requires a combination of heart, faith and hard work.  Every year, our experiences teach us new tactics and strategies to improve.  If you're getting started, here's a few tips from <a href = "https://clark.osu.edu/people/pamela-j-bennett">Pamela J. Bennett, Horticulture Educator for OSU Extension</a> from in <a href = "https://www.ohiomagazine.com/home-garden/article/backyard-garden-guide#:~:text=Here's%20when%20to%20start%2C%20what,producing%20a%20bounty%20of%20food.&text=Ohioans%20enjoy%20a%20reasonably%20long,it%20does%20what%20you%20plant"> OhioMagazine.com: </a>
 </p>
 
 <ol> 
@@ -28,11 +27,11 @@
  <li>Whether you plan to freeze or preserve what you grow</li>
  <li>Size of your family</li>
 
-NOTE:  Mention (https://clark.osu.edu/people/pamela-j-bennett) 
-
+<!-- NOTE:  Mention (https://clark.osu.edu/people/pamela-j-bennett) 
+ -->
 <h2>Consider Your Time</h2>
 <p>
-Take into consideration the time you can devote to preparation, planting, caring for and harvesting your crops.  “It’s best to start small the first year then go from there,” says Bennett, adding that a 10-foot-by-10-foot garden would be a small one for a family of four. Begin with a list of your favorite vegetables, but don’t be afraid to experiment as well.    Source (https://www.ohiomagazine.com/home-garden/article/backyard-garden-guide#:~:text=Here's%20when%20to%20start%2C%20what,producing%20a%20bounty%20of%20food.&text=Ohioans%20enjoy%20a%20reasonably%20long,it%20does%20what%20you%20plant) 
+Take into consideration the time you can devote to preparation, planting, caring for and harvesting your crops.  “It’s best to start small the first year then go from there,” says Bennett, adding that a 10-foot-by-10-foot garden would be a small one for a family of four. Begin with a list of your favorite vegetables, but don’t be afraid to experiment as well (<a href = "https://www.ohiomagazine.com/home-garden/article/backyard-garden-guide#:~:text=Here's%20when%20to%20start%2C%20what,producing%20a%20bounty%20of%20food.&text=Ohioans%20enjoy%20a%20reasonably%20long,it%20does%20what%20you%20plant">OhioMagazine.com</a>
 </p>
 
 <h2> Consider Your Space </h2>
