--- a/Carmichael/plantingseason.html
+++ b/Carmichael/plantingseason.html
@@ -19,6 +19,7 @@
 
 <p>
  Planting season to harvest season requires a combination of heart, faith and hard work.  Every year, our experiences teach us new tactics and strategies to improve.  If you're getting started, here's a few tips from <a href = "https://clark.osu.edu/people/pamela-j-bennett">Pamela J. Bennett, Horticulture Educator for OSU Extension</a> from <a href = "https://www.ohiomagazine.com/home-garden/article/backyard-garden-guide"> OhioMagazine.com: </a>
+<!-- NOTE:  Need to see if link to OhioMagazine.com is working -->
 </p>
 
 <ol> 
