--- a/Carmichael/plantingseason.html
+++ b/Carmichael/plantingseason.html
@@ -27,12 +27,14 @@
  <li>Available space</li>
  <li>Whether you plan to freeze or preserve what you grow</li>
  <li>Size of your family</li>
+ 
+ </ol>
 
 <!-- NOTE:  Mention (https://clark.osu.edu/people/pamela-j-bennett) 
  -->
 <h2>Consider Your Time</h2>
 <p>
-Take into consideration the time you can devote to preparation, planting, caring for and harvesting your crops.  “It’s best to start small the first year then go from there,” says Bennett, adding that a 10-foot-by-10-foot garden would be a small one for a family of four. Begin with a list of your favorite vegetables, but don’t be afraid to experiment as well <a href = "https://www.ohiomagazine.com/home-garden/article/backyard-garden-guide>(OhioMagazine.com)</a>
+Take into consideration the time you can devote to preparation, planting, caring for and harvesting your crops.  “It’s best to start small the first year then go from there,” says Bennett, adding that a 10-foot-by-10-foot garden would be a small one for a family of four. Begin with a list of your favorite vegetables, but don’t be afraid to experiment as well <a href = "https://www.ohiomagazine.com/home-garden/article/backyard-garden-guide">(OhioMagazine.com)</a>
 </p>
 
 <h2> Consider Your Space </h2>
