--- a/roadtripplanner.html
+++ b/roadtripplanner.html
@@ -8,4 +8,4 @@
 <li>Listen to audiobooks or podcasts. They help keep the brain active and you spend less time looking for a signal as you travel further from home.</li>
 </ol>
   <br>
-Remember that these are memories in the making with your family and loved ones. Plan ahead of what you can and let the open road guide you to your destination safely.
+<p>Remember that these are memories in the making with your family and loved ones. Plan ahead of what you can and let the open road guide you to your destination safely.</p>
