--- a/Carmichael/threeAnswersToLifeInsuranceQuestions.html
+++ b/Carmichael/threeAnswersToLifeInsuranceQuestions.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html>
+  
+<head>
+  <title>Three Answers to Life Insurance Questions</title>
+</head>
+ 
+  <body>
+  
+  <h1>THREE ANSWERS TO LIFE INSURANCE QUESTIONS</h1>
+	<p>The idea of life insurance can be traced back to ancient Rome where Roman Law adopted a type of bottomry contract that originated with Babylon merchants.  In Rome burial <a href="https://www.britannica.com/topic/insurance/Historical-development-of-insurance
+    ">societies paid for the funeral costs</a> from monthly dues collected.  
+	While a historical lesson may not have been a burning question, it is intersting that the concept of insurance has been around since early 4000-3000 BC with the Babylon's bottomry contracts.</p>
+
+
+  <h2>The three most asked questions we receive regarding life insurance policies are</h2>
+    <ol>
+      <li>What is Universal Life Insurance?</li>
+      <li>How much life insurance I need?</li>	
+      <li>Will I be able to receive cash from my life insurance policy?</li>
+  </ol>
+
+
+
+  <h2>What is Universal Life Insurance</h2>
+  <p><a href ="https://www.americannational.com/wps/portal/an/menu/insurance/life">Universal life</a> is a permanent life insurance policy.  Although permanent, it does provide flexibility to adjust both payments and the payout requests.  The premiums are flexibile and the premium payments can be adjusted over time.  There is also flexibility  in ability to increase or decrease death benefits.</p>
+	<p>An added benefit to the Universal Life Insurance is the opportunity to borrow against a portion of the policy's cash value when the unexpected happens in life.  Riders (an optional add-on to an insurance policy) can help you customize the policy with options like disability waivers, extending coverage and providing coverage for your children.</p>
+	
+
+
+
+  <h2>How much life insurance do I need?</h2>
+	<p>Life insurance helps not only provide for our final expenses but also to help alleviate some of the financial strains when the time comes. It can be overwhelming trying to decide how much coverage your family will need.  Some important questions to ask include.</p>
+    <ul>
+		<li>How much annual income would you like to provide, if you were no longer here?  Think about how much your family will need to cover daily living expenses.</li>
+		<li>How many years should income be provided after you're gone?  How long will your family need the additional income (consider ages of your children or othe factors)</li>
+		<li>How much debt would you like to pay off immediately?  Consider things like mortgage, private student loans and other debts.</li>
+    <li>How much would you like to leave for childcare?  Care.com can help with this calculation.</li>
+    <li>How many children require college or trade school funding?</li>
+	  <li>How much would you like to set aside for an emergency fund?  An ideal amount is three to six month's worth of expenses.</li>
+  </ul>
+   <p> Use this life insurance needs calculator from lifehappens.org <a href = "https://lifehappens.org/life-insurance-needs-calculator"> here</a>
+
+
+
+  <h2>Will I be able to receive cash from my life insurance polices?</h2>
+	<p>Life insurance builds cash value over time.  This cash value is an asset that you can withdraw from when the situation calls for it. Examples can include paying for college, covering unexpected health care expenses, making a down payment on a new home, or similar.</p>
+	<p>By starting a life insurance policy young, recipients are build a greater cash value to withdraw from when a life events calls upon it.  Many new parents and grandparents select opening a life insurance policy as a way to provide a valuable asset to the child as they grow older and provide resources as they enter new phases in their lives like going to college or purchasing their new home.</p>
+
+  </body>
+</html>
+	
 
